--- a/views/chestionar.ejs
+++ b/views/chestionar.ejs
@@ -11,22 +11,7 @@
           <% } %>
         </div>
       <%  }); %>
-        <input  style="margin-top: 3vh;appearance: none;
-        background-color: #ec313a;
-        border: 1px solid rgba(27, 31, 35, .15);
-        border-radius: 6px;
-        box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
-        box-sizing: border-box;color: #fff;
-        cursor: pointer;
-        z-index: 5;
-        display: inline-block;
-        font-size: 14px;
-        font-weight: 600;
-        line-height: 20px;
-        padding: 6px 16px;
-        position: relative;
-        text-align: center;
-        text-decoration: none;" type="submit" value="Trimite raspunsuri"/>
+        <input  class="button-3" type="submit" value="Trimite raspunsuri"/>
       </form>
   </div>
 </div>
